--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,11 @@ steps:
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
     deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'KubernetesConnection'
+    subscriptionId: 'b41dfeba-7afc-490b-96a0-86932f83429c'
     action: 'Create Or Update Resource Group'
+    resourceGroupName: 'Rg-AKS-Cluster-Demo'
+    location: 'Canada East'
     templateLocation: 'URL of the file'
-    csmFileLink: 'https://raw.githubusercontent.com/provenchez/ARM_templates_demo/main/Tuto/azuredeploy.json?token=ADCYILJ6FKAHRMZC4SFWFVTAKTBKM'
+    csmFileLink: 'https://raw.githubusercontent.com/provenchez/ARM_templates_demo/main/Tuto/blobStorage.json?token=ADCYILJ6FKAHRMZC4SFWFVTAKTBKM'
     deploymentMode: 'Incremental'
